--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
         "method-override": "^3.0.0",
         "mysql2": "^1.7.0",
         "passport": "^0.4.0",
+        "passport-facebook": "^3.0.0",
+        "passport-local": "^1.0.0",
         "sequelize": "^5.19.1",
         "sequelize-cli": "^5.5.1"
     },
     "devDependencies": {
+        "dotenv": "^8.1.0",
         "eslint": "^6.5.0",
         "eslint-config-prettier": "^6.3.0",
         "eslint-plugin-prettier": "^3.1.1",
