--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express": "^4.17.1",
         "express-handlebars": "^3.1.0",
         "express-session": "^1.16.2",
+        "flash": "^1.1.0",
         "method-override": "^3.0.0",
         "mysql2": "^1.7.0",
         "passport": "^0.4.0",
