--- a/package.json
+++ b/package.json
@@ -6,38 +6,88 @@
     "scripts": {
         "lint": "eslint --format table --fix .",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node index.js",
-        "dev": "nodemon index.js"
+        "start": "npm run build-client & node index.js",
+        "dev": "npm run dev-client & nodemon index.js",
+        "build-client": "npm run clean && parcel build client/src/index.html --out-dir client/dist",
+        "dev-client": "npm run clean && parcel client/src/index.html --out-dir client/dist",
+        "clean": "rm -rf .cache client/dist"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "babel-core": "^6.26.3",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-polyfill": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-0": "^6.24.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "express-handlebars": "^3.1.0",
         "express-session": "^1.16.2",
         "flash": "^1.1.0",
+        "history": "^4.7.2",
+        "html-react-parser": "^0.9.1",
         "method-override": "^3.0.0",
         "mysql2": "^1.7.0",
+        "parcel-bundler": "^1.10.3",
         "passport": "^0.4.0",
         "passport-facebook": "^3.0.0",
         "passport-local": "^1.0.0",
+        "react": "^16.6.0",
+        "react-bootstrap": "^0.32.4",
+        "react-dom": "^16.6.0",
+        "react-router-dom": "^5.1.1",
+        "reactstrap": "^8.0.1",
         "sequelize": "^5.19.1",
         "sequelize-cli": "^5.5.1"
     },
     "devDependencies": {
+        "babel-eslint": "^10.0.3",
         "dotenv": "^8.1.0",
         "eslint": "^6.5.0",
+        "eslint-config-airbnb": "^18.0.1",
         "eslint-config-prettier": "^6.3.0",
+        "eslint-config-react-app": "^5.0.2",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
         "eslint-plugin-prettier": "^3.1.1",
+        "eslint-plugin-react": "^7.15.1",
+        "husky": "^3.0.8",
+        "lint-staged": "^9.4.1",
         "nodemon": "^1.19.3",
-        "prettier": "^1.18.2"
+        "prettier": "^1.18.2",
+        "pretty-quick": "^1.11.1"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "plugin:prettier/recommended"
+        ]
     },
     "prettier": {
         "semi": true,
         "userTabs": true,
         "singleQuote": true
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint"
+        }
+    },
+    "lint-staged": {
+        "*.+(js|jsx)": [
+            "pretty-quick --staged",
+            "eslint client/src/ --fix",
+            "git add"
+        ],
+        "*.+(json|css|md)": [
+            "prettier --write",
+            "git add"
+        ]
     }
 }
