--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.19.0",
         "babel-core": "^6.26.3",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
